Developers goal card gap problem solved

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,9 @@
   width: 946px;
   height: 336px;
   margin: 0 auto;
-  /* gap: 80px; */
+  gap: 80px;
+  display: flex;
+  flex-direction: column;
 }
 .developers-goal-card {
   display: flex;
@@ -77,7 +79,6 @@
   height: 240px;
   padding: 48px;
   border-radius: 16px;
-  margin-top: 48px;
   background: linear-gradient(
     90deg,
     rgb(255, 255, 255),
